Implement getter/setter of filenames in OSExchangeDataProviderMac

This CL supports to write/read the multiple file names for
dragging on Mac.

BUG=878690

Rename the email self in AUTHORS

Change-Id: I3bba2912ad5f89de7e8fb106c89c8f4eb6468935
Reviewed-on: https://chromium-review.googlesource.com/c/1256791
Reviewed-by: Nico Weber <thakis@chromium.org>
Commit-Queue: Miyoung Shin <myid.shin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596097}
Former-commit-id: 1bcfd0dfa18248a7d05f9756458307348c3eea62