ui/base/dragdrop/os_exchange_data_provider_mac.mm
@@ -16,6 +16,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import "ui/base/clipboard/clipboard_util_mac.h"
 #include "ui/base/clipboard/custom_data_helper.h"
 #import "ui/base/dragdrop/cocoa_dnd_util.h"
+#include "ui/base/dragdrop/file_info.h"
 #include "url/gurl.h"
 
 namespace ui {
@@ -65,7 +66,16 @@ void OSExchangeDataProviderMac::SetFilename(const base::FilePath& path) {
 
 void OSExchangeDataProviderMac::SetFilenames(
     const std::vector<FileInfo>& filenames) {
-  NOTIMPLEMENTED();
+  if (filenames.empty())
+    return;
+
+  NSMutableArray* paths = [NSMutableArray arrayWithCapacity:filenames.size()];
+
+  for (const auto& filename : filenames) {
+    NSString* path = base::SysUTF8ToNSString(filename.path.value());
+    [paths addObject:path];
+  }
+  [pasteboard_->get() setPropertyList:paths forType:NSFilenamesPboardType];
 }
 
 void OSExchangeDataProviderMac::SetPickledData(
@@ -138,8 +148,16 @@ bool OSExchangeDataProviderMac::GetFilename(base::FilePath* path) const {
 
 bool OSExchangeDataProviderMac::GetFilenames(
     std::vector<FileInfo>* filenames) const {
-  NOTIMPLEMENTED();
-  return false;
+  NSArray* paths =
+      [pasteboard_->get() propertyListForType:NSFilenamesPboardType];
+  if ([paths count] == 0)
+    return false;
+
+  for (NSString* path in paths)
+    filenames->push_back(
+        {base::FilePath(base::SysNSStringToUTF8(path)), base::FilePath()});
+
+  return true;
 }
 
 bool OSExchangeDataProviderMac::GetPickledData(
